[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paramiko"
dynamic = ["version"]
description = "SSH2 protocol library"
readme = "README.rst"
requires-python = ">=3.8"
license = "LGPL-2.1-or-later"
authors = [ 
    { name = "Jeff Forcier", email = "jeff@bitprophet.org" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "bcrypt>=3.2",
    "cryptography>=3.3",
    "pynacl>=1.5",
]

[project.urls]
Homepage = "https://paramiko.org"
Docs = "https://docs.paramiko.org"
Source = "https://github.com/paramiko/paramiko"
Issues = "https://github.com/paramiko/paramiko/issues"
Changelog = "https://www.paramiko.org/changelog.html"
CI = "https://app.circleci.com/pipelines/github/paramiko/paramiko"

[project.optional-dependencies]
gssapi = [
    "pyasn1>=0.1.7",
    'gssapi>=1.4.1;platform_system!="Windows"',
    'pywin32>=2.1.8;platform_system=="Windows"',
]
invoke = ["invoke>=2.0"]
ed25519 = []
all = [
    "paramiko[gssapi,invoke]",
]
dev = [
    "invoke>=2.0",
    "invocations>=3.2",
    "pytest-relaxed>=2",
    "pytest-xdist>=3",
    "flake8>=4,<5",
    "black>=22.8,<22.9",
    "codespell>=2.2.1,<2.3",
    "coverage>=6.2,<7",
    "alabaster==0.7.13",
    "releases>=2.1",
    "watchdog<2",
    "icecream>=2.1",
]

[tool.setuptools]
packages = ["paramiko"]

[tool.setuptools.dynamic]
version = {attr = "paramiko._version.__version__"}

[tool.codecov]
comment = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*"
